[project]
name = "bsxplorer"
version = "1.3.0a"
authors = [
  { name="shitohana", email="kyudytskiy@gmail.com" },
]
keywords = ['bismark', 'methylation', 'plot', 'bs-seq']
license = {file = "LICENSE.txt"}
dependencies = [
    "biopython~=1.84",
    "dynamictreecut~=0.1.1",
    "fastcluster~=1.2.6",
    "func-timeout~=4.3.5",
    "jinja2~=3.1.4",
    "matplotlib~=3.9.2",
    "numpy~=2.0.2",
    "pandas~=2.2.3",
    "plotly~=5.24.1",
    "polars~=1.9.0",
    "progress~=1.6",
    "psutil~=6.1.0",
    "pyarrow~=17.0.0",
    "pydantic~=2.9.2",
    "pyreadr~=0.5.2",
    "scikit-learn~=1.5.2",
    "scipy~=1.13.1",
    "seaborn~=0.13.2",
]
description = "Analytical framework for BS-seq data comparison and visualization"
readme = "README.md"
requires-python = ">=3.9, <3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Repository = "https://github.com/shitohana/BSXplorer"
Documentation = "https://shitohana.github.io/BSXplorer/"
Issues = "https://github.com/shitohana/BSXplorer/issues"


[tool.uv]
dev-dependencies = [
    "pip>=24.2",
    "setuptools>=75.2.0",
]
package = true

[project.scripts]
bsxplorer-metagene = "bsxplorer.cons_master:metagene"
bsxplorer-category = "bsxplorer.cons_master:category"
bsxplorer-chr = "bsxplorer.cons_master:chr_levels"

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "site-packages",
]
line-length = 88
target-version = "py39"
fix=true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # numpy
    "NPY"
]
ignore = ["D102", "D401"]
fixable = ["ALL"]
extend-safe-fixes = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
