[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bsxplorer"
readme = "README.md"
version = "1.1.0.post3"
authors = [
  { name="Konstantin Y", email="kyudytskiy@gmail.com" },
]
keywords = ['bismark', 'methylation', 'plot', 'bs-seq']
license = {text="MIT License"}

description = "Analytical framework for BS-seq data comparison and visualization"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

requires-python = ">=3.12"
dependencies = [
    "anyio==4.13.0",
    "bio==1.6.2",
    "biopython==1.87",
    "biothings-client==0.5.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "dynamictreecut==0.1.1",
    "fastcluster==1.2.6",
    "fonttools==4.62.1",
    "func-timeout==4.3.5",
    "gprofiler-official==1.0.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "kiwisolver==1.5.0",
    "llvmlite==0.47.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mygene==3.2.2",
    "numba==0.65.0",
    "numpy==1.26.4",
    "packaging==23.2",
    "pandas==2.2.3",
    "pillow==12.2.0",
    "platformdirs==4.9.6",
    "plotly==5.24.1",
    "polars==0.20.0",
    "pooch==1.9.0",
    "progress==1.6.1",
    "psutil==5.9.8",
    "pyarrow==14.0.2",
    "pyparsing==3.3.2",
    "pyreadr==0.5.6",
    "pysam==0.22.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "requests==2.33.1",
    "scikit-learn==1.4.2",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "six==1.17.0",
    "tenacity==9.1.4",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "tzdata==2026.1",
    "urllib3==2.6.3",
]
# dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/shitohana/BSXplorer"
Repository = "https://github.com/shitohana/BSXplorer"
Documentation = "https://shitohana.github.io/BSXplorer/"
Issues = "https://github.com/shitohana/BSXplorer/issues"

[tool.hatch.build]
exclude = ["/venv", "/dist", "/test", "/docs"]

#[tool.hatch.build.targets.wheel]
#packages = ["src/bsxplorer"]

[project.scripts]
bsxplorer-metagene = "bsxplorer.cons_master:metagene"
bsxplorer-category = "bsxplorer.cons_master:category"
bsxplorer-chr = "bsxplorer.cons_master:chr_levels"
bsxplorer-bam = "bsxplorer.cons_master:bam"

[tool.uv.pip]
python = "3.12"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py312"
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
[lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
